@@ -453,6 +453,9 @@ Signature of routine (e.g. prototype or parameter list)
 .TP 4
 .I z
 Include the "kind:" key in kind field
+.TP 4
+.I t
+Type and name of a variable or typedef as "typeref:" field [enabled]
 .PD 1
 .RE
 
